tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.stderr
error: missing documentation for an enum
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:7:5
   |
7  | /     typewit::simple_type_witness! {
8  | |         pub enum EnumWithOnlyDocAttrs {
9  | |             Bar = u8,
10 | |             ///
...  |
15 | |     }
   | |_____^
   |
note: the lint level is defined here
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:2:9
   |
2  | #![deny(missing_docs)]
   |         ^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for a variant
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:7:5
   |
7  | /     typewit::simple_type_witness! {
8  | |         pub enum EnumWithOnlyDocAttrs {
9  | |             Bar = u8,
10 | |             ///
...  |
15 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for an enum
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:20:5
   |
20 | /     typewit::simple_type_witness! {
21 | |         pub enum EnumWithOnlyDocAttrs {
22 | |             ///
23 | |             Bar = u8,
...  |
28 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for a variant
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:20:5
   |
20 | /     typewit::simple_type_witness! {
21 | |         pub enum EnumWithOnlyDocAttrs {
22 | |             ///
23 | |             Bar = u8,
...  |
28 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for an enum
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:33:5
   |
33 | /     typewit::simple_type_witness! {
34 | |         pub enum EnumWithOnlyDocAttrs {
35 | |             ///
36 | |             Bar = u8,
...  |
41 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for a variant
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:33:5
   |
33 | /     typewit::simple_type_witness! {
34 | |         pub enum EnumWithOnlyDocAttrs {
35 | |             ///
36 | |             Bar = u8,
...  |
41 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for an enum
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:47:5
   |
47 | /     typewit::simple_type_witness! {
48 | |         pub enum EnumWithCfgAndOtherAttrs {
49 | |             Bar = u8,
50 | |             #[cfg(any())]
...  |
55 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for a variant
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:47:5
   |
47 | /     typewit::simple_type_witness! {
48 | |         pub enum EnumWithCfgAndOtherAttrs {
49 | |             Bar = u8,
50 | |             #[cfg(any())]
...  |
55 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for an enum
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:60:5
   |
60 | /     typewit::simple_type_witness! {
61 | |         pub enum EnumWithCfgAndOtherAttrs {
62 | |             ///
63 | |             Bar = u8,
...  |
68 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing documentation for a variant
  --> tests/misc_tests/stw_ui_tests/stw_macro_cfg_and_docs_on_variants-err.rs:60:5
   |
60 | /     typewit::simple_type_witness! {
61 | |         pub enum EnumWithCfgAndOtherAttrs {
62 | |             ///
63 | |             Bar = u8,
...  |
68 | |     }
   | |_____^
   |
   = note: this error originates in the macro `$crate::__stw_top_items` which comes from the expansion of the macro `typewit::simple_type_witness` (in Nightly builds, run with -Z macro-backtrace for more info)
